# Chess-game

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Check.cpp  Check.h  Check_Mate.cpp  Check_Mate.h  King.cpp  King.h  Knight.cpp  Knight.h  No_Piece.cpp  No_Piece.h  Obstruction.cpp  Obstruction.h  Out_of_Board.cpp  Out_of_Board.h  Pawn.cpp  Pawn.h  Pawn.hpp  Piece.cpp  Piece.h  Piece.hpp  Player.cpp  Player.h  Position.cpp  Position.h  Position.hpp  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  main  main.cpp
includes/: Bishop.h  Board.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Player.h  Position.h  Queen.h  Rook.h
includes/exception/: Check.h  Check_Mate.h  No_Piece.h  Obstruction.h  Out_of_Board.h
src/: Bishop.cpp  Board.cpp  Check.cpp  Check_Mate.cpp  Game.cpp  King.cpp  Knight.cpp  No_Piece.cpp  Obstruction.cpp  Out_of_Board.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Position.cpp  Queen.cpp  Rook.cpp
